--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.airbnb.android:lottie:6.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
