--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.airbnb.android:lottie:6.0.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'io.kommunicate.sdk:kommunicateui:2.5.1'
+
 }
