--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MySFU"
         tools:targetApi="31">
         <activity
-            android:name=".SplashActivity"
+            android:name=".ui.activity.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="true"
             android:label="@string/title_activity_splash"
@@ -27,9 +27,9 @@
             android:value="${MAPS_API_KEY}" />
 
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.activity.LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.MySFU">
+            android:theme="@style/Theme.MySFU.PseudoFullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,7 +37,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.MySFU"/>
