--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:name=".ui.activity.MainActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MySFU"/>
+            android:theme="@style/Theme.MySFU.PseudoFullScreen"/>
     </application>
 
 </manifest>
